# vaid

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/vaid-client/: Cargo.toml  README.md
crates/vaid-client/examples/: emit_pop.rs  emit_pop_pathquery.rs
crates/vaid-client/src/: auth.rs  lib.rs
crates/vaid-client/tests/: conformance.rs  pathquery_conformance.rs
crates/vaid-client/tests/vectors/: pathquery_v1.json
crates/vaid-mint/: CHANGELOG.md  Cargo.toml  README.md
crates/vaid-mint/examples/: emit_mint_vector.rs
crates/vaid-mint/src/: audit.rs  authz.rs  document.rs  error.rs  issuer.rs  lib.rs  mint.rs  mint_types.rs  revocation.rs
crates/vaid-mint/tests/: mint_conformance.rs
crates/vaid-mint/tests/vectors/: mint_v1.json
crates/vaid-pop/: Cargo.toml  README.md
crates/vaid-pop/examples/: emit_completion_vector.rs
crates/vaid-pop/src/: identity.rs  lib.rs  ports.rs  request_auth.rs  request_completion.rs  vaid_pop.rs
crates/vaid-pop/tests/: completion_conformance.rs
python/vaid-langchain/: README.md  pyproject.toml
python/vaid-langchain/examples/: quickstart.py
python/vaid-langchain/tests/: test_langchain_tool.py  test_path_convention.py  test_vaid_auth.py
python/vaid-langchain/vaid_langchain/: __init__.py  _target.py  auth.py  conformance.py  langchain_tool.py
python/vaid-mint/: CHANGELOG.md  README.md  pyproject.toml
python/vaid-mint/tests/: test_mint_behavior.py  test_mint_conformance.py  test_revocation.py
python/vaid-mint/vaid_mint/: __init__.py  audit.py  authz.py  conformance.py  document.py  error.py  issuer.py  mint.py  mint_types.py  revocation.py
python/vaid-pop/: README.md  pyproject.toml
python/vaid-pop/scripts/: emit_pop.py
python/vaid-pop/tests/: test_completion_conformance.py  test_conformance.py
python/vaid-pop/vaid_pop/: __init__.py  completion.py  conformance.py  signer.py
python/vaid-pop/vaid_pop/vectors/: completion_v1.json  operator_pop_v1.json
scripts/: post_publish_smoke.sh
